# IoTSystem

./: .gitignore
esp32/liangyijia/main/: CMakeLists.txt  app_config.h  app_types.c  app_types.h  main.c  mqtt_service.c  mqtt_service.h  uart_service.c  uart_service.h
mqtt-web/: app.py  clothesline.db  run.py
mqtt-web/static/lib/: fontawesome.min.css
mqtt-web/templates/: index.html
stm32/liangyijia/: liangyijia.ioc
stm32/liangyijia/BSP/bh1750/: bh1750.c  bh1750.h
stm32/liangyijia/BSP/dht11/: dht11.c  dht11.h
stm32/liangyijia/BSP/oled/: oled.c  oled.h  oledfont.c  oledfont.h
stm32/liangyijia/Core/Inc/: app.h
stm32/liangyijia/Core/Src/: app.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
stm32/liangyijia/MDK-ARM/: liangyijia.uvprojx
